--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<div class="login-form">
-    <form method="post">
+
+<div class="login-form container-fluid " style="margin-top: 1em;">
+    <form method="post" >
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="login">
+        <input type="submit" value="login" >
     </form>
 </div>
 {% endblock %}
