--- a/app/templates/app/app_list.html
+++ b/app/templates/app/app_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<div class="container-fluid">
+<!-- <div class="container-fluid"> -->
 <h3>Apps</h3>
 <table class="table table-borderless">
     <thead>
@@ -28,7 +28,7 @@
     </tbody>
 </table>
 {% endblock %}
-</div>
+<!-- </div> -->
 
 <!--% for app in all_apps %-->
 <!--<li>-->
