--- a/templates/base.html
+++ b/templates/base.html
@@ -5,23 +5,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>{{ page_title|default:"ApkStore" }}</title>
+    <style> 
+        a 
+        {
+        outline: none;
+        text-decoration: none;
+        padding: 2px 1px 0;
+        }
+    </style> 
+
 </head>
-<body>
-
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light container-fluid">
+<body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#">ApkStore</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'main' %}">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'apps:list' %}">Apps</a>
+                    <a class="nav-link" aria-current="page" href="{% url 'apps:list' %}">Apps</a>
                 </li>
                 {% if user.is_anonymous %}
                 <li class="nav-item">
@@ -42,6 +50,7 @@
                 </li>
             </ul>
         </div>
+    </div>>
     </nav>
 <!--{% block menu %}-->
 <!--{% endblock %}-->
@@ -50,4 +59,9 @@
 {% endblock %}
 
 </body>
+<footer class="mt-auto text-center text-lg-start bg-light text-muted">
+    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        &copy; Daria. 2022
+    </div>
+</footer>
 </html>
