--- a/developer/templates/developer/devaccount_form.html
+++ b/developer/templates/developer/devaccount_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block main_content %}
-<div class="user-creation-form container-fluid">
+<div class="user-creation-form container-fluid" style="margin-top: 1em;">
     <form method="post">
         {% csrf_token %}
 
